--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,11 +6,16 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-
+  <style>
+    df-messenger {
+     --df-messenger-input-placeholder-font-color: #ffffff;
+    }
+  </style>
   <!-- dialogflow 메시지 형식 추가 -->
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   <df-messenger intent="WELCOME" chat-title="한성봇" agent-id="a46f3c16-7326-4846-90c0-ce43bd45db25" language-code="ko"
     chat-icon="https://cdn.discordapp.com/attachments/823290287639756831/845244889846251540/36x36bugi.png">
+    
   </df-messenger>
 
   <!--
